logs/closeablequeue.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CloseableQueue'...
Listing './lib/python3.5/site-packages/CloseableQueue/test'...
Compiling './lib/python3.5/site-packages/CloseableQueue/test/__init__.py'...
***   File "./lib/python3.5/site-packages/CloseableQueue/test/__init__.py", line 67
    raise FailingQueueException, "You Lose"
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/CloseableQueue/test/test_queue.py'...
***   File "./lib/python3.5/site-packages/CloseableQueue/test/test_queue.py", line 90
    raise RuntimeError, "Call this function with an empty queue"
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/CloseableQueue/test/test_support.py'...
***   File "./lib/python3.5/site-packages/CloseableQueue/test/test_support.py", line 98
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/CloseableQueue-0.9.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
